fixes page jumping behind menu

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,7 +42,6 @@ body {
 }
 .site-wrap.menu {
   height: 100vh;
-  padding-top: 0;
   overflow: hidden;
 }
 h2 {
